# cv_typist

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
.github/: copilot-instructions.md
data/: config_example.yaml  master_example.yaml
docs/: ACTE_implementation_artifact.md  STATUS.md  implementation_plan.md  phases.md
output/: .gitkeep
src/: __init__.py  generator_typst.py  loader.py  models.py  parser.py  transformer.py
src/application/: __init__.py  loop.py  pipeline.py  ports.py
src/domain/: __init__.py  actions.py  exceptions.py  models.py  state.py  types.py
src/entrypoints/: __init__.py  api.py  cli.py
src/infra/: __init__.py  cache.py  grounding.py  llm.py  loader.py  renderer.py  selection.py
templates/: main.typ.j2  resume.typ.j2  test.typ.j2
tests/: __init__.py  conftest.py
tests/application/: __init__.py  test_loop.py  test_pipeline.py
tests/domain/: __init__.py  test_models.py
tests/e2e/: __init__.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
tests/infra/: __init__.py  test_cache.py  test_grounding.py  test_renderer.py  test_selection.py
